--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,12 @@
     <title>El titulo del post</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body>
-    <h1>Aqui vamos a hacer un blog post</h1>
+<body> 
+    <div id="container">
+        <div id="post">
+    <h1>Este es el título atractivo e interesante del post</h1>
     <p>Y este es el parrafo de inicio</p>
+        </div>
+    </div>
 </body>
 </html>
