--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El titulo del post</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body> 
+
+<body>
     <div id="container">
         <div id="post">
-    <h1>Este es el título atractivo e interesante del post</h1>
-    <p>Y este es el parrafo de inicio</p>
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar 
+                las cosas increibles que se pueden hacer con ramas
+            </p>
+            <p>
+                los blogs son la mejor forma de compartir información Y
+                tus ideas. Mucho más que ir a conferencias o salir en Youtube.
+                Excepto si eres un rockstar.Pero estadísticamente no lo eres
+                ..... por ahora.
+            </p>
+
         </div>
     </div>
 </body>
+
 </html>
