--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
                 Excepto si eres un rockstar.Pero estadísticamente no lo eres
                 ..... por ahora.
             </p>
-            <p>Suscribete y dale like</p>
+            <p>Suscribete y dale like aea</p>
 
         </div>
     </div>
